--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,27 @@ title: "CFAD: Context-First Agentic Development"
 description: "A comprehensive methodology for building production-ready applications with AI agents in Augment Code"
 url: "https://tebiiee.github.io"
 baseurl: "/cfad-augment-method"
+
 theme: minima
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
+
+# Navigation
+header_pages:
+  - methodology-en.md
+  - methodology.md
+  - quick-start.md
+  - examples.md
+
+markdown: kramdown
+highlighter: rouge
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/
+  - .gitignore
+  - LICENSE
