feat: complete methodology consistency audit and GitHub Pages updates
- Fix all phase numbering inconsistencies across workflows
- Update file organization paths from current-sprint to sprint-X structure
- Correct workflow navigation and phase references
- Update branding from CFAD to Augment Develop Method
- Fix template references and add Web Search to core tools
- Update GitHub Pages files (index.md, quick-start.md, _config.yml, README.md)
- Mark methodology-old.md as deprecated
- Ensure 100% consistency across all documentation

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "CFAD: Context-First Agentic Development"
+title: "Augment Develop Method"
 description: "A comprehensive methodology for building production-ready applications with AI agents in Augment Code"
 url: "https://tebiiee.github.io"
 baseurl: "/cfad-augment-method"
@@ -11,10 +11,8 @@ plugins:
 
 # Navigation
 header_pages:
-  - methodology-en.md
   - methodology.md
   - quick-start.md
-  - examples.md
 
 markdown: kramdown
 highlighter: rouge
